--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "ghp-build": "ng build --prod --base-href=https://joster422.github.io/ogre/",
+    "ghp-deploy": "git subtree push --prefix dist origin",
+    "gh-pages": "npm run ghp-build && npm run ghp-deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
