--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "ghp-build": "ng build --prod --base-href=https://joster422.github.io/ogre/",
-    "ghp-deploy": "git subtree push --prefix dist origin master",
+    "ghp-deploy": "git subtree push --prefix dist origin gh-pages",
     "gh-pages": "npm run ghp-build && npm run ghp-deploy",
     "test": "ng test",
     "lint": "ng lint",
