--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "name": "ogre",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
     "ghp-build": "ng build --prod --base-href=https://joster422.github.io/ogre/",
-    "ghp-deploy": "git add . && git commit --message=\"chore - gh-pages deploy\" && git push && git subtree push --prefix dist origin gh-pages",
-    "gh-pages": "npm run ghp-build && npm run ghp-deploy",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "ghp-deploy": "git add . && git commit --message=\"chore - gh-pages deploy\" && git push",
+    "ghp-remove-old": "git push origin --delete gh-pages",
+    "ghp-push": "git subtree push --prefix dist origin gh-pages",
+    "gh-pages": "npm run ghp-build && npm run ghp-deploy && npm run ghp-remove-old && ghp-push"
   },
   "private": true,
   "dependencies": {
