--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
+# /dist
 /tmp
 /out-tsc
 # Only exists if Bazel was run
 /bazel-out
 
-# dependencies
+# # dependencies
 /node_modules
 
 # profiling files
