--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ghp-deploy": "git add . && git commit --message=\"chore - gh-pages deploy\" && git push",
     "ghp-remove-old": "git push origin --delete gh-pages",
     "ghp-push": "git subtree push --prefix dist origin gh-pages",
-    "gh-pages": "npm run ghp-build && npm run ghp-deploy && npm run ghp-remove-old && ghp-push"
+    "gh-pages": "npm run ghp-build && npm run ghp-deploy && npm run ghp-remove-old && npm run ghp-push"
   },
   "private": true,
   "dependencies": {
