--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "ogre",
   "version": "0.0.1",
   "scripts": {
-    "ghp-build": "ng build --prod --base-href=https://joster422.github.io/ogre/",
-    "ghp-deploy": "git add . && git commit --message=\"chore - gh-pages deploy\" && git push",
-    "ghp-remove-old": "git push origin --delete gh-pages",
-    "ghp-push": "git subtree push --prefix dist origin gh-pages",
-    "gh-pages": "npm run ghp-build && npm run ghp-deploy && npm run ghp-remove-old && npm run ghp-push"
+    "pages": "ng build --prod --base-href=https://joster-dev.github.io/ogre/"
   },
   "private": true,
   "dependencies": {
